Fixed width issue on mobile with intro headers

--- a/src/styles/global/responsive.scss
+++ b/src/styles/global/responsive.scss
@@ -81,7 +81,7 @@
 
         .heading {
             padding: 146px 0px 200px 0px !important;
-            width: 300px!important;
+            width: 68%!important;
 
             &.second-heading {
                 right: 100px!important
